# lumi

./: .gitignore  README.md  lumi.yaml.example  pyproject.toml
lumi/: __init__.py  agent.py  cli.py  config.py  events.py  messages.py  prompts_loader.py
lumi/llm/: __init__.py  anthropic.py  base.py  messages_anthropic.py  openai.py
lumi/prompts/: default.txt
lumi/tools/: __init__.py  bash.py  filesystem.py  registry.py  shell.py  workspace.py
lumi/tools/server/: __init__.py  registry.py  web_search.py
sprints/20260628/: README.md  architecture.md  configuration.md  modules.md  roadmap.md
sprints/20260629/: README.md  architecture.md  configuration.md  modules.md  roadmap.md
tests/: test_agent.py  test_anthropic.py  test_config.py  test_messages.py  test_messages_anthropic.py  test_openai.py  test_server_tools.py  test_tools.py
