[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lumi"
version = "0.1.0"
description = "A minimal LLM agent harness"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-httpx>=0.30", "ruff>=0.4"]

[project.scripts]
lumi = "lumi.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["lumi"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
